# Freetasia

./: .gitignore  AutoRelease.md  Building  Bundle  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: release.yml
scripts/: bundle.bat  bundle.ps1
src/: app.rs  lib.rs  main.rs
src/editor/: clip.rs  export.rs  mod.rs  overlay.rs  player.rs  project.rs  text_overlay.rs  timeline.rs
src/recorder/: audio.rs  manager.rs  mod.rs  screen.rs
tests/: editor_tests.rs  recorder_tests.rs
